--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -1,3 +1,43 @@
 page-feed {
+    .card{
+        border-radius: 5px;
+        margin-bottom: 20px;
+    }
 
+    .card-body{
+        padding: 0px;
+    }
+
+    .card img{
+        height: auto;
+        margin: 0 auto;        
+        width: 100%;
+    }
+
+    .descricao-imovel{
+        border-bottom: 1px solid rgba(#000,0.1);
+        padding-bottom: 3px;
+        padding-top: 3px;
+    }
+
+    .descricao-imovel i{
+        color: #696969;
+        font-size: 1.1em;        
+        margin-right: 5px;
+    }
+
+    .descricao-imovel span{
+        font-size: 1em;
+        margin-right: 15px;
+    }   
+
+    .descricao-imovel, .endereco{
+        padding: 10px;
+    }
+
+    .endereco{
+        padding-bottom: 5px;
+        padding-top: 5px;
+    }
+    
 }
